--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "lucide-react": "^0.488.0",
     "next": "14.2.14",
     "next-themes": "^0.4.6",
-    "node-appwrite": "14.0.0",
+    "node-appwrite": "^15.0.1",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
