--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "hono": "4.6.3",
         "lucide-react": "^0.488.0",
         "next": "14.2.14",
+        "next-intl": "^4.1.0",
         "next-themes": "^0.4.6",
         "node-appwrite": "^15.0.1",
         "nuqs": "1.19.1",
